trying to organize

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,6 +7,22 @@ http {
   port = 9000
 }
 
+akka.http {
+  host-connection-pool {
+    client = {
+      proxy {
+        http {
+          host = proxy.cervedgroup.com
+          port = 8080
+          user = cge01138
+          password = Cambiami4
+          non-proxy-hosts = ["localhost"]
+        }
+      }
+    }
+  }
+}
+
 services {
   ip-api {
     host = "ip-api.com"
